[package]
name = "npmrc-config-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Rust port of @npmcli/config v10.5.0 for reading and parsing npm .npmrc configuration files"
license = "MIT"
repository = "https://github.com/evaliyev/npmrc-config-rs"
documentation = "https://docs.rs/npmrc-config-rs"
readme = "README.md"
keywords = ["npm", "npmrc", "config", "registry", "authentication"]
categories = ["config", "development-tools"]

[dependencies]
base64 = "0.22"
dirs = "5"
regex = "1"
thiserror = "2"
url = "2"
which = "7"

[dev-dependencies]
tempfile = "3"
